# AICodeReviewer

./: .dockerignore  .gitignore  pyproject.toml  requirements.txt
Back/: Dockerfile  app.py  auth.py  comment.py
Back/prompts/: reviewer.md
